add server action to filter

--- a/xmarts_validate_purchase/views/views.xml
+++ b/xmarts_validate_purchase/views/views.xml
@@ -64,18 +64,28 @@
     <menuitem name="Tipos de Compras" id="menu_purchase_types" parent="purchase.menu_purchase_config"
               action="purchase_types_window" sequence="101"/>
 
-    <record model="ir.actions.act_window" id="purchase_to_valid_window">
-      <field name="name">Compras pendientes por validar</field>
-      <field name="res_model">purchase.order</field>
-      <field name="view_type">form</field>
-      <field name="view_mode">tree,form</field>
-      <!--<field name="context">{'group_by':'id_active'}</field>-->
-      <field name="domain">[('valid_purchase', '=', False),('state','in',['draft','sent','to approve'])]</field>
+    <record id="action_purchases_to_valid" model="ir.actions.server" >
+        <field name="name">Compras a validar</field>
+        <field name="model_id" ref="model_purchase_order"/>
+        <field name="state">code</field>
+        <field name="code">
+            action = model.purchse_search()
+        </field>
     </record>
 
-    <menuitem name="Compras por Validar" id="menu_purchase_to_valide" parent="purchase.menu_procurement_management"
-              action="purchase_to_valid_window"/>
+    <menuitem name="Compras por Validar" id="menu_purchase_to_valide_p" parent="purchase.menu_procurement_management" action="action_purchases_to_valid" sequence="101"/>
 
+
+    <record id="action_purchases_to_valids" model="ir.actions.server" >
+        <field name="name">Compras a validar</field>
+        <field name="model_id" ref="model_purchase_order"/>
+        <field name="state">code</field>
+        <field name="code">
+            action = model.purchse_searchs()
+        </field>
+    </record>
+
+    <menuitem name="Compras a Validar" id="menu_purchase_to_valide_p" parent="purchase.menu_procurement_management" action="action_purchases_to_valids" sequence="102"/>
     <!-- explicit list view definition -->
     <!--
     <record model="ir.ui.view" id="belenes.list">
