--- a/xmarts_validate_purchase/views/views.xml
+++ b/xmarts_validate_purchase/views/views.xml
@@ -4,9 +4,9 @@
     <record id="belenes_add_fields_users" model="ir.ui.view">
         <field name="name">belenes_add_fields_users</field>
         <field name="model">res.users</field>
-        <field name="inherit_id" ref="base.view_users_form"/>
+        <field name="inherit_id" ref="base.user_groups_view"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='in_group_10']" position="after">
+            <xpath expr="//field[@name='in_group_5']" position="after">
                 <field name="valid_purchase"/>
             </xpath>
         </field>
